--- a/cgpa-to-percentage.html
+++ b/cgpa-to-percentage.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CGPA to Percentage</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=2" />
+
 </head>
 
 <body>
